# wimg

./: .gitignore  CHANGELOG.md  CLAUDE.md  bunfig.toml  lefthook.yml  skills-lock.json
.claude/rules/: architecture.md  banking-aggregators.md  c-abi.md  ci-testflight.md  decisions.md  devtools.md  fints.md  (+8 more)
docs/: privacy-deep-dive.md  wimg-full.md
libwimg/: build-xcframework.sh  build.zig
scripts/: build-all.sh  build-android.sh  build-ios.sh  build-wasm.sh  check-bank-drift.py  check-bank-drift.ts  check-embeddings.py  combine-docs.sh  dev-web.sh  dev.sh  dump-hitan.py  gen-xcodeproj.sh  i18n-android.ts  i18n-codegen.ts  i18n-sweep-android.ts  i18n-sweep-ios.ts  i18n-xcstrings.ts  patch-gguf-scores.py  quantize-q8.py  release.sh  test-bank-matrix.py  test-bank-matrix.ts  test-fints-auth.py  test-fints-dialog.py  test-fints-fetch.py  test-fints-fetch2.py  test-fints-fetch3.py  test-fints-fetch4.py  test-fints-fetch5.py  test-fints-fetch6.py  test-fints-fetch7.py  test-fints-fetch8.py  test-fints.py  test-pyfints.py
stitch-designs/: csv-import.html  dashboard.html  spending-analysis.html  transaction-list.html
test-data/: comdirect-sample.csv
wimg-android/: .gitignore  settings.gradle.kts
wimg-android/app/src/main/cpp/: CMakeLists.txt  wimg_jni.c
wimg-ios/: ExportOptions.plist  project.yml
wimg-sync/: package.json  wrangler.toml
wimg-web/: .oxfmtrc.json  .oxlintrc.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  svelte.config.js  tsconfig.json  vite-plugin-i18n.ts  vite.config.ts  vitest.config.ts  wrangler.toml
(+253 files in other folders)
